--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "style-loader": "^1.1.4",
     "tedious": "^8.3.0",
     "url-loader": "^4.1.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.10.3",
+    "webpack-dev-server": "^3.11.2",
     "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "jquery": "^3.6.0",
     "loadsh": "0.0.4"
   }
 }
